<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IOT App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="export">Export Excel</string>
    <string name="eespl">EESPL</string>
    <string name="logout">Logout</string>
    <string name="fromDate">Choose From Date</string>
    <string name="toDate">Choose to Date</string>
    <string name="copyright">Welcome to IOT App</string>
   
</resources>
