<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
   
<LinearLayout 
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edtFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/fromDate"
            android:inputType="date"
            android:textColor="#31A5E7"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/ivFromDate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/fromDate"
            android:src="@drawable/calendar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edtToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/toDate"
            android:inputType="date"
            android:textColor="#31A5E7"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/ivToDate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/toDate"
            android:src="@drawable/calendar" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spnParameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btcritical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
       android:text="+" />

    <EditText
        android:id="@+id/edcritical"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
         android:inputType="number"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/btn_red"
        android:shadowColor="#000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="6"
        android:text="@string/submit"
        android:textColor="#FFFFFF" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphView"
        android:layout_width="match_parent"
        android:layout_height="210dip"
        android:layout_marginTop="10dp"
         />
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
     >
    </TableLayout>
     <Button
        android:id="@+id/btnExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/btn_red"
        android:shadowColor="#000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="6"
        android:text="@string/export"
        android:textColor="#FFFFFF" />
    
    </LinearLayout>

</ScrollView>